# MARGA

./: CMakeLists.txt  Process.sh  README.md  brainExtraction.cpp  brainExtraction.h  brainio.cpp  brainio.h  fillInHoles.cxx  imageDefinitions.h  main.cpp
